# dbt-hands-on

./: .gitignore  .sqlfluff  README.md  dbt_project.yml  justfile  package-lock.yml  profiles.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json
docs/: challenge_skills.md  challenges.md  setup_guide.md
macros/: generate_schema_name.sql
models/staging/: _sources.yml  stg_customers.sql  stg_orders.sql
scripts/: generate_starter_db.py
seeds/: iso_country_codes.csv  raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_payments.csv  raw_payments_late.csv  raw_product_categories.csv  raw_products.csv  raw_products_v2.csv  raw_reviews.csv  raw_suppliers.csv
